--- a/views/index.haml
+++ b/views/index.haml
@@ -1,11 +1,15 @@
-%h3
-	-@subtitle
-%p 
-	%a{:href => '/sponsors'}
-		Sponsors
-%p
-	%a{:href => '/sponsor/new'}	
-		Create new sponsor
-%p
-	%a{:href => '/slots'}
-		Slot availability
+#header
+	%h2 
+		=@title
+#content
+	%h3
+		-@subtitle
+	%p 
+		%a{:href => '/sponsors'}
+			Sponsors
+	%p
+		%a{:href => '/sponsor/new'}	
+			Create new sponsor
+	%p
+		%a{:href => '/slots'}
+			Slot availability
