--- a/views/index.haml
+++ b/views/index.haml
@@ -5,11 +5,8 @@
 	%h3
 		-@subtitle
 	%p 
-		%a{:href => '/sponsors'}
-			Sponsors
+		%a{:href => '/customers'}
+			Customers
 	%p
-		%a{:href => '/sponsor/new'}	
-			Create new sponsor
-	%p
-		%a{:href => '/slots'}
-			Slot availability
+		%a{:href => '/customer/new'}	
+			Create new customer
