--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,13 +2,13 @@
 %html{:xmlns => 'http://www.w3.org/1999/xhtml'}
 	%head
 		%title
-			= @title || 'Knowsy Administration'
+			= @title || 'Customer Administration'
 		%meta{:'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
 		%link{:rel => 'stylesheet', :href => '/global.css', :type => 'text/css', :media => 'all'}
 	%body
 		#top
 			#top-content
-				%h1 Knowsy Administration
+				%h1 Customer Administration
 				%ul#menu
 					%li 
 						%a{:href => "/"}
@@ -18,7 +18,7 @@
 							Sign In
 		= yield
 		#footer
-			%img{:src => "/images/innovgames_logo.png", :alt => "The Innovation Games Company"}
+			%img{:src => "/images/logo.png", :alt => "42 Claps"}
 			%p.note
-				Innovation Games® and Knowsy® are trademarks of The Innovation Games® Company. 
+				All Rights Reserved 42 Claps. 
 				
