--- a/views/edit.haml
+++ b/views/edit.haml
@@ -2,34 +2,34 @@
 	%h2
 		=@title
 	#subnav	
-		%a{:href=>"/sponsors"}
+		%a{:href=>"/customers"}
 			Show all
 #content
 	%h3
 		%span.label
 			Edit:
-		%a{:href => "/sponsor/show/#{@sponsor.id}"}
+		%a{:href => "/customer/show/#{@customer.id}"}
 			=@subtitle
 	%form{:method => 'POST'}
 		%fieldset
 			%h4 Organization 
 			%p.row
 				%label Name
-				%input.text{:type => 'text', :name => 'company_name', :value => "#{@sponsor.company_name}"}
+				%input.text{:type => 'text', :name => 'company_name', :value => "#{@customer.company_name}"}
 		%fieldset
 			%h4 Contact
 			%p.row
 				%label First Name
-				%input.text{:type => 'text', :name => 'first_name', :value => "#{@sponsor.first_name}"}
+				%input.text{:type => 'text', :name => 'first_name', :value => "#{@customer.first_name}"}
 			%p.row
 				%label Last Name
-				%input.text{:type => 'text', :name => 'last_name', :value => "#{@sponsor.last_name}"}
+				%input.text{:type => 'text', :name => 'last_name', :value => "#{@customer.last_name}"}
 			%p.row
 				%label Email Address
-				%input.text{:type => 'text', :name => 'email', :value => "#{@sponsor.email}"}
+				%input.text{:type => 'text', :name => 'email', :value => "#{@customer.email}"}
 			%p.row
 				%label Phone Number
-				%input.text{:type => 'text', :name => 'phone', :value => "#{@sponsor.phone}"}
+				%input.text{:type => 'text', :name => 'phone', :value => "#{@customer.phone}"}
 		%fieldset
 			%p.row	
 				%label &nbsp
