--- a/views/show.haml
+++ b/views/show.haml
@@ -2,7 +2,7 @@
 	%h2 
 		=@title
 	#subnav	
-		%a{:href=>"/sponsors"}
+		%a{:href=>"/customers"}
 			Show all
 #content
 	%h3
@@ -10,29 +10,29 @@
 	#show
 		%fieldset.actions
 			#actions_content
-				%a.button{:href => "/sponsor/edit/#{@sponsor.id}" } Edit
-				%a.button{:href => "/sponsor/delete/#{@sponsor.id}" } Delete
+				%a.button{:href => "/customer/edit/#{@customer.id}" } Edit
+				%a.button{:href => "/customer/delete/#{@customer.id}" } Delete
 		%fieldset
 			%h4 Organization 
 			%p.row
 				%span.label ID
 				%span.text 
-					=@sponsor.id
+					=@customer.id
 		%fieldset
 			%h4 Contact
 			%p.row
 				%span.label First Name
 				%span.text 
-					=@sponsor.first_name
+					=@customer.first_name
 			%p.row
 				%span.label Last Name
 				%span.text 
-					=@sponsor.last_name
+					=@customer.last_name
 			%p.row
 				%span.label Email Address
 				%span.text 
-					=@sponsor.email
+					=@customer.email
 			%p.row
 				%span.label Phone Number
 				%span.text 
-					=@sponsor.phone
+					=@customer.phone
