--- a/views/layout.haml
+++ b/views/layout.haml
@@ -20,5 +20,5 @@
 		#footer
 			%img{:src => "/images/logo.png", :alt => "42 Claps"}
 			%p.note
-				All Rights Reserved 42 Claps. 
+				This is a CRUD completeness experiment. Feel free to fork the code on Github. 
 				
